samples/_failures_safe/1761411683_62cca1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b065731.c: In function ‘main’:
./samples/SAFE/__tmp_0b065731.c:159:41: error: expected ‘)’ at end of input
  159 |         if (scanf("%d %d %d", &from, &to
      |                  ~                      ^
      |                                         )
./samples/SAFE/__tmp_0b065731.c:159:9: error: expected declaration or statement at end of input
  159 |         if (scanf("%d %d %d", &from, &to
      |         ^~
./samples/SAFE/__tmp_0b065731.c:159:9: error: expected declaration or statement at end of input
